# simplex

./: .gitignore  LICENSE  README.md  SECURITY.md  Simplex.ipynb  advanced_simplex.py  algebraic_expression.py  app.py  appimage.sh  dsl.py  example.py  expresion.py  funcion.py  funciones.py  functions.py  math_expression.py  objective_function.py  old_simplex.py  oldsimplex.py  pyproject.toml  pythonic_dsl.py  requirements.txt  simplex.py  simplex_gran_m.py  test_algebraic_expression.py  test_dsl.py  test_expresion.py  test_funcion.py  test_lp_file.py  test_objective_function.py  test_pythonic_dsl.py  test_simplex.py  tests.py
examples/: ejemplo_dsl.txt  vuelos.lp
gui/: main_window.py  solver_thread.py
gui/views/: about_dialog.py  console_log_widget.py  emitting_stream.py  input_widget.py  plot_widget.py  results_table.py
